Arregla bug de acceso a habilidades en cd