@@ -8,22 +8,15 @@ import javafx.fxml.FXML;
 import javafx.scene.control.ProgressBar;
 import javafx.scene.image.ImageView;
 import javafx.scene.input.MouseEvent;
-import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
 public class Controller {
-
-    @FXML
-    private ImageView background;
 
     @FXML
     private ProgressBar health_bar;
 
     @FXML
     private ImageView enemyImage, pistolImage;
-
-    @FXML
-    private StackPane button_1, button_2, button_3, button_4;
 
     private Player player;
     private Enemy enemy;
@@ -35,18 +28,18 @@ public class Controller {
     }
 
     @FXML
-    void attack(MouseEvent event) {
+    void attack() {
         PlayerService.performBasicAttack(player, enemy, health_bar);
     }
 
     @FXML
-    void fist_cursor(MouseEvent event) {
-        CursorService.setCursorToFist(Stage.getWindows().get(0).getScene());
+    void fist_cursor() {
+        CursorService.setCursorToFist(Stage.getWindows().getFirst().getScene());
     }
 
     @FXML
-    void reset_cursor(MouseEvent event) {
-        CursorService.resetCursor(Stage.getWindows().get(0).getScene());
+    void reset_cursor() {
+        CursorService.resetCursor(Stage.getWindows().getFirst().getScene());
     }
 
     @FXML
